--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,6 +13,7 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= post.user.name %></td>
         <td><%= post.content %></td>
         <td><%= image_tag post.image.url %></td>
         <td><%= link_to 'Show', post %></td>
