--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,43 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
+.navbar {
+  position: fixed;
+  height: 70px;
+  width: 100%;
+  background-color: #3b5998;
+  z-index: 100;
+}
+
+.fas, .far {
+  color: #3b5998;
+}
+
+.second-key {
+  color:#1da1f2;
+}
+
+.white {
+  color: white;
+}
+
+.white:hover {
+  color: silver;
+}
+
+.navbar-nav {
+  float: right;
+}
+
+.flash {
+  padding-top: 70px;
+  height: 5px;
+  text-align: center;
+}
+
+body {
+  background-color: #B9C4DB;
+  font-family: 'Kosugi Maru', sans-serif;
+}
