--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,42 +4,65 @@
     <title>InstagramClone</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="viewport" content="width=device-width">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" rel="stylesheet">
   </head>
 
   <body>
-    <% flash.each do |key, value| %>
-      <%= content_tag(:div, value, class: "#{key}") %>
-    <% end %>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
-            <span class="sr-only">InstagramClone</span>
+            <span class="sr-only">Bootstrap</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">InstagramClone
+          <a class="navbar-brand" href="#"><i class="fab fa-facebook fa-2x white"></i>
           </a>
         </div>
         <div id="gnavi" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <% if logged_in? %>
-              <%= link_to "Profile", user_path(current_user.id) %>
-              <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+            <li><%= link_to new_post_path, title:"create new post" do %>
+                  <i class="far fa-paper-plane fa-2x white"></i>
+                <% end %>
+            </li>
+            <li><%= link_to user_path(current_user.id), title: "profile" do %>
+              <i class="fas fa-user-circle fa-2x white"></i>
+              <% end %>
+            </li>
+            <li><%= link_to session_path(current_user.id), title: "logout", method: :delete do %>
+              <i class="fas fa-sign-out-alt fa-2x white"></i>
+              <% end %>
+            </li>
             <% else %>
-              <%= link_to "Sign up", new_user_path %>
-              <%= link_to "Login", new_session_path %>
-            <% end %>
+            <li><%= link_to new_user_path, title: "signup" do %>
+              <i class="fas fa-user-plus fa-2x white"></i>
+              <% end %>
+            </li>
+            <li><%= link_to new_session_path, title: "login" do %>
+              <i class="fas fa-door-open fa-2x white"></i>
+              <% end %>
+            </li>
           </ul>
         </div>
+        <% end %>
       </div>
-    </nav>
+  </nav>
+  <div class="flash">
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+  </div>
+    <%= yield %>
+  </body>
 
-      <%= yield %>
-    </body>
-  </html>
+  <script>
+    $(function(){
+      $(".danger, .notice").fadeOut(5000);
+    });
+  </script>
+</html>
