--- a/app/views/posts/confirm.html.erb
+++ b/app/views/posts/confirm.html.erb
@@ -1,13 +1,27 @@
-<h1>確認画面</h1>
-<%= form_with(model: @post, url: posts_path, local: true) do |form| %>
-  <%= @post.content %>
-  <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
-  <%= form.hidden_field :content %>
-  <%= form.hidden_field :image_cache %>
-  <%= form.submit "投稿する" %>
-<% end %>
-<%= form_with(model:@post, url:new_post_path, local:true, method:"get") do |form| %>
-  <%= form.hidden_field :content %>
-  <%= form.hidden_field :image_cache %>
-  <%= form.submit "戻る", name: "back" %>
-<% end %>
+<div class="container">
+  <h2>以下の内容で、投稿する。</h2>
+  <div>
+  <%= form_with(model: @post, url: posts_path, local: true) do |form| %>
+    <%= form.hidden_field :content %>
+    <p><i class="far fa-comment-dots fa-lg"></i>Content:  <%= @post.content %></p>
+    
+    <%= form.label :image do %>
+      <i class="fas fa-image fa-2x"></i>
+      <% end %>
+      <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
+      <%= form.file_field :image %>
+      <%= form.hidden_field :image_cache %>
+    </div>
+    <br>
+    <%= button_tag type: "submit", class: "submit-btn", title: "Submit" do %>
+      <i class="fas fa-paper-plane fa-lg"></i>
+      <% end %>
+      |
+      <label>
+        <i class="fas fa-undo fa-lg"></i>
+        <div class="field">
+          <%= form.submit "戻る", name: 'back' %>
+        </div>
+      </label>
+      <% end %>
+</div>
