--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Post</h1>
-<%= render 'form', post: @post %>
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<div class="container">
+<h2>投稿を編集する</h2>
+<%= render 'form' %>
+</div>
