--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,35 @@
-<h1>New Post</h1>
-
-<%= render 'form', post: @post %>
-
-<%= link_to 'Back', posts_path %>
+<div class="container">
+<h2>投稿しよう</h2>
+<%= form_with(model: @post, local: true ,url: confirm_posts_path ) do |form| %>
+  <% if @post.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= @post.errors.count %>件のエラーがあります。</h2>
+      <ul>
+      <% @post.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div class="post_title">
+    <i class="far fa-comment-dots fa-lg"></i>
+    <%= form.label :content %>
+    <%= form.text_field :content %>
+  </div>
+  <label>
+    <i class="fas fa-image fa-lg"></i>
+    <div class="field">
+      <%= form.label :image %>
+      <%= form.file_field :image %>
+    </div>
+  </label>
+  <br><br>
+  <%= button_tag type: "submit", class: "submit-btn", title: "Submit" do %>
+    <i class="fas fa-paper-plane fa-lg"></i>
+  <% end %>
+  |
+  <%= link_to posts_path, title:"back to top" do %>
+    <i class="fas fa-undo fa-lg"></i>
+  <% end %>
+<% end %>
+</div>
