--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,16 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Content:</strong>
-  <%= @post.content %>
-   <%= image_tag @post.image.url %>
-</p>
-<% unless @post.user_id == current_user.id %>
-  <% if @favorite.present? %>
-    <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
-  <% else %>
-    <%= link_to 'お気に入りする', favorites_path(post_id: @post.id), method: :post, class: 'btn btn-primary' %>
-  <% end %>
-<% end %>
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class="container">
+  <h2>投稿詳細</h2>
+  <p><i class="far fa-comment-dots fa-lg"></i>Content: <%= @post.content %></p>
+  <p><i class="fas fa-image fa-lg"></i>Image: <%= image_tag @post.image.url %></p>
+  <br><br>
+  <% if @post.user.id == current_user.id %>
+    <%= link_to edit_post_path(@post), title:"edit" do %>
+      <i class="far fa-edit fa-lg"></i>
+      <% end %>|
+      <% end %>
+      <%= link_to posts_path, title:"back to top" do %>
+      <i class="fas fa-undo fa-lg"></i>
+      <% end %>
+      <% unless @post.user_id == current_user.id %>
+      |
+      <% if @favorite.present? %>
+      <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
+      <% else %>
+      <%= link_to 'お気に入りする', favorites_path(post_id: @post.id), method: :post, class: 'btn btn-primary' %>
+      <% end %>
+      <% end %>
+</div>
