--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,20 @@
-<h1><%= @user.name %>のページ</h1>
-<p>メールアドレス: <%= @user.email %></p>
-<p>プロフ画像: <%= image_tag @user.image.url %></p>
-<td><%= link_to 'favorites', user_favorites_path(@user) %></td>
-<td><%= link_to 'Edit', edit_user_path(@user) %></td>
+<div class="container">
+  <h2><i class="fas fa-user-astronaut fa-lg"></i>UserName:<%= @user.name %></h2>
+  <div class="pic-container">
+  <%= image_tag @user.image.url, width:"200", class:"avator" %>
+  <p><i class="fas fa-at fa-lg"></i><%= @user.email %></p>
+  <br>
+  <br>
+  <%= link_to user_favorites_path(@user), title:"favorites" do %>
+    <i class="fas fa-thumbs-up fa-lg"></i><i class="fas fa-list"></i>
+  <% end %>
+|
+  <%= link_to edit_user_path(@user), title:"edit" do%>
+  <i class="far fa-edit fa-lg"></i>
+  <% end %>
+|
+  <%= link_to posts_path, title: "back" do %>
+    <i class="fas fa-backspace fa-lg"></i>
+  <% end %>
+  </div>
+</div>
