--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,40 +1,43 @@
-<%= form_with(model: @user, local: true ) do |form| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @user.errors.count %>件のエラーがあります。</h2>
-      <ul>
-      <% @user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+<div class="container">
+  <%= form_with(model: @user, local: true ) do |form| %>
+    <% if @user.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= @user.errors.count %>件のエラーがあります。</h2>
+        <ul>
+          <% @user.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <%= image_tag(@user.image.url) if @user.image && @user.image.url %>
-  <br>
-  <label>
-    <i class="fas fa-image fa-lg"></i>
-    <div class="field">
-      <%= form.label :image %>
-      <%= form.file_field :image %>
-    </div>
-  </label>
-  <br>
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  <br>
-    <%= form.label :email %>
-    <%= form.email_field :email %>
-  <br>
-    <%= form.label :password %>
-    <%= form.password_field :password %>
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation %>
-  <br>
-  <%= button_tag type: "submit", class: "submit-btn", title: "Submit" do %>
-    <i class="fas fa-user-astronaut fa-lg"></i>
-  <% end %>
-  |
-  <%= link_to user_path(@user.id), title: "back" do %>
-    <i class="fas fa-backspace fa-lg"></i>
-  <% end %>
-<% end %>
+      <%= image_tag(@user.image.url) if @user.image && @user.image.url %>
+      <br>
+      <label>
+        <i class="fas fa-image fa-lg"></i>
+        <div class="field">
+          <%= form.label :image %>
+          <%= form.file_field :image %>
+        </div>
+      </label>
+      <br>
+      <%= form.label :name %>
+      <%= form.text_field :name %>
+      <br>
+      <%= form.label :email %>
+      <%= form.email_field :email %>
+      <br>
+      <%= form.label :password %>
+      <%= form.password_field :password %>
+      <%= form.label :password_confirmation %>
+      <%= form.password_field :password_confirmation %>
+      <br>
+      <br>
+      <%= button_tag type: "submit", class: "submit-btn", title: "Submit" do %>
+      <i class="fas fa-user-astronaut fa-lg"></i>
+      <% end %>
+      |
+      <%= link_to user_path(@user.id), title: "back" do %>
+      <i class="fas fa-backspace fa-lg"></i>
+      <% end %>
+      <% end %>
+</div>
