--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,9 +22,9 @@
       <label>
         <i class="fas fa-user-astronaut fa-lg"></i>
         <div class="field">
-          <%= f.label :image %>
           <%= f.file_field :image %>
         </div>
+        プロフィール画像
       </label>
       <br>
       <i class="fas fa-key fa-lg"></i>
