--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
   </head>
 
   <body>
@@ -20,8 +20,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><i class="fab fa-facebook fa-2x white"></i>
-          </a>
+          <% if logged_in? %>
+            <%= link_to posts_path, title: "posts" do %>
+              <i class="fab fa-instagram-square fa-4x white"></i>
+            <% end %>
+          <% else %>
+            <%= link_to new_session_path, title: "login" do %>
+              <i class="fab fa-instagram-square fa-4x white"></i>
+            <% end %>
+          <% end %>
         </div>
         <div id="gnavi" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
