--- a/app/views/confirm_mailer/confirm_mail.html.erb
+++ b/app/views/confirm_mailer/confirm_mail.html.erb
@@ -1,3 +1,4 @@
 <h1>投稿が完了しました！</h1>
-<h4>お問い合わせ内容の確認</h4>
+<h4>投稿内容の確認</h4>
 <p>content: <%= @confirm.content %></p>
+<p>image  : <%= image_tag @confirm.image.url %>
